Removed unnecessary trace logs